--- a/part 1 .Rmd
+++ b/part 1 .Rmd
@@ -97,7 +97,7 @@ For year between 2017 and 2020, the percentage of people answering "no" was much
 
 ##Overall smoking trend in the past 4 years 
 
-```{r,echo =FALSE}
+```{r,include=FALSE}
  finding_smoking_trend = function(dataframe){
    dataframe %>% 
   select(smoking_status)%>%
@@ -131,6 +131,9 @@ smoke_trend_overall = bind_rows(smoke_trend_17,smoke_trend_18,smoke_trend_19,smo
   rename(ppl_sum = n)%>%
   relocate(year)
 
+```
+
+```{r,echo =FALSE}
 #lets create a ggpplot
 # ***task： try it to make it interactive soon....
 #Problem: Should I use rate instead....???
