--- a/quit_smoke.Rmd
+++ b/quit_smoke.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "Quit Smoking"
+output: 
+  html_document:
+    toc: true
+    toc_float: true
+    theme: sandstone
 ---
 
 ```{r, message = FALSE}
