--- a/index.Rmd
+++ b/index.Rmd
@@ -32,7 +32,7 @@ The datasets of 2016 to 2020 were downloaded from the websites as mentioned abov
 
 * [Quitline – Service Utilization - 2010 To Present](https://chronicdata.cdc.gov/Quitline/Quitline-Service-Utilization-2010-To-Present/equ4-92qe)
 
-The dataset was downloaded from the CDC open data website. It was filtered by locations (states in the U.S.) because it contains data from other regions. Also, it was filtered by the categorical variable “Counseling and/or Medications” for studying smokers who seeks for help in counseling and/or medication. Then, we filtered the data by year (2020) because we want to focus on smokers in this year. Since the original data value was the number of calls per 1000 tobacco users, we divided the value by 1000 for better readability. Finally, this dataset is ready to be visualized.
+The dataset was downloaded from the CDC open data website. It was filtered by `locations` (states in the U.S.) because it contains data from other regions. Also, it was filtered by the categorical variable `Counseling and/or Medications` for studying smokers who seeks for help in counseling and/or medication. Then, we filtered the data by `year` because we want to focus on smokers in 2020. Since the original data value was the number of calls per 1000 tobacco users, we divided the value by 1000 for better readability. Finally, the dataset is ready to be visualized.
 
 
 ### Initial Questions
